Fix LM icon overflow on the taxon form in Firefox

--- a/specifyweb/frontend/js_src/css/lifemapper.css
+++ b/specifyweb/frontend/js_src/css/lifemapper.css
@@ -12,6 +12,7 @@
 
 .lifemapper-source-icon {
   height: 28px;
+  min-width: 28px;
   position: relative;
   background: none;
   border: none;
